# otec_fura

./: .env.sample  LICENSE  README.md  admin_tools.py  api_setup.md  app_ask.py  config.py  create_user.sh  description.md  index.html  knowledge_store.py  log.sh  main.py  middleware.py  models_meta.py  otec_fura_architecture.md  otec_fura_architecture.py  pull.sh  pyproject.toml  requirements.txt  run.sh  test_api.sh  user_endpoint.py
.github/workflows/: python-tests.yml
api/: auth.py  crawler_router.py  embedder.py  get_context.py  get_memory.py  search_knowledge.py  search_web.py  user_endpoint.py  web_crawler.py
deploy/: systemd-fura-api.service
knowledge/ai/: transformers.txt
memory/: public.jsonl
memory/jiri/: meta.json  private.jsonl
scripts/: create_user.py  sync_requirements.py  user_utils.py
static/: models_meta.json
tests/: test_api.py  test_auth.py  test_create_user_script.py  test_knowledge_store.py  test_missing_users_file.py  test_model_validation.py  test_models_meta.py  test_search_knowledge_reload.py
webui/: index.html  index_bak.html  script.js  style.css
