[project]
name = "otec-fura"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi",
    "uvicorn",
    "sentence-transformers",
    "faiss-cpu",
    "pandas",
    "python-multipart",
    "requests",
    "beautifulsoup4",
    "pytest",
]

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"
